# ipapp

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml~  Makefile  README.md  pyproject.toml  release-notes.rst  requirements.txt  requirements_dev.txt  requirements_fastapi.txt  requirements_iprpc.txt  requirements_postgres.txt  requirements_s3.txt  requirements_sftp.txt  requirements_testing.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml  pythonpackage.yml
docs/source/: about.rst  conf.py  http_client.rst  http_server.rst  index.rst  util_lock.rst
docs/source/_static/: theme_overrides.css
examples/: amqp_consumer.py  amqp_rpc.py  amqp_rpc_client.py  amqp_rpc_server.py  app.py  autoreload.py  docker-compose.yml  fastapi.py  from_dotenv.env  from_dotenv.py  helloworld.py  http_jsonrpc_client.py  http_jsonrpc_server.py  http_post_rpc_client.py  http_post_rpc_server.py  http_restrpc_client.py  http_restrpc_server.py  http_rpc_server.py  lock.py  openapi.py  oracle.py  s3.py  tm.py  tm_cron.py
examples/microservices/: amqp.py  back.py  front.py
ipapp/: __init__.py  app.py  autoreload.py  cli.py  component.py  config.py  ctx.py  error.py  misc.py  proxy.py
ipapp/asgi/: uvicorn.py
ipapp/db/: oracle.py  pg.py
ipapp/http/: __init__.py  _base.py  client.py  server.py
ipapp/logger/: __init__.py  logger.py  span.py
ipapp/logger/adapters/: __init__.py  _abc.py  prometheus.py  requests.py  sentry.py  zipkin.py
ipapp/mq/: pika.py
ipapp/openapi/: misc.py
ipapp/pytest/qase/: plugin.py
ipapp/rpc/http/: client.py  server.py
ipapp/rpc/jsonrpc/: main.py
ipapp/rpc/jsonrpc/http/: __init__.py  client.py  server.py
ipapp/rpc/jsonrpc/mq/: pika.py
ipapp/rpc/jsonrpc/openrpc/: discover.py
ipapp/rpc/mq/: pika.py
ipapp/rpc/post_rpc/: __init__.py  error.py  main.py
ipapp/rpc/post_rpc/http/: __init__.py  client.py  server.py
ipapp/rpc/restrpc/: __init__.py  error.py  main.py
ipapp/rpc/restrpc/http/: client.py  server.py
ipapp/s3/: boto.py  exceptions.py  models.py
ipapp/s3/models/: respouns_models.py
ipapp/sftp/: client.py
ipapp/task/: db.py
ipapp/utils/: lock.py
ipapp/utils/lock/: main.py  redis.py
tests/: conftest.py  docker-compose.yml  openapi.json  test_cli.py  test_config.py  test_db_oracle.py  test_db_pg.py  test_from_dotenv.py  test_http.py  test_json_encode.py  test_lock.py  test_logger.py  test_logger_prometheus.py  test_logger_requests.py  test_logger_sentry.py  test_logger_zipkin.py  test_mq_pika.py  test_openrpc.py  test_post_rpc_http.py  test_proxy.py  test_qase.py  test_restrpc.py  test_restrpc_http.py  test_rpc.py  test_rpc_json.py  test_rpc_json_discover.py  test_rpc_json_http.py  test_rpc_json_pika.py  test_s3.py  test_task_db.py
tests/files/: test.docx  test.ods
tests/mocks/: qase.yaml
(+1 files in other folders)
