[tool.black]
line-length = 79
target_version = ['py37', 'py38']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.vscode
)
'''

[tool.coverage.run]
branch = true
source = ["ipapp"]
omit = ["site-packages", ".tox"]

[tool.pytest.ini_options]
addopts = "-s -v --cov --cov-report term --cov-report=html --cov-config pyproject.toml"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:distutils"]

[tool.isort]
line_length = 79
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true

[tool.poetry]
name = "ipapp"
version = "0.0.0"
description = "InPlat application framework"
authors = ["InPlat"]
classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Internet',
]
readme = "README.md"
homepage = "https://github.com/inplat/ipapp"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
aiohttp = "^3.6.2"
aiozipkin = "^0.7.0"
aiojobs = "^0.2.2"
prometheus-client = "^0.8.0"
sentry-sdk = ">=0.18.0,<1.0"
deepmerge = "^0.1.0"
async-timeout = "^3.0.1"
pyyaml = "^5.3.1"
docstring-parser = "^0.7.1"
tinyrpc = "^1.0.4"
jsonschema = "^3.2.0"
uvicorn = {version = "^0.12.1", optional = true}
fastapi = {version = "^0.61.0", optional = true}
cx-Oracle = {version = "^8.0.0", optional = true}
asyncpg = {version = "^0.21.0", optional = true}
pika = {version = "^1.1.0", optional = true}
aiobotocore = {version = "^1.0.7", optional = true}
python-magic = {version = "^0.4.18", optional = true}
asyncssh = {version = "^2.3.0", extras = ["pyOpenSSL"], optional = true}

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.8.4"
mock = "^4.0.2"
mypy = "0.790"
bandit = "1.6.2"
isort = "5.6.4"
safety = "^1.9.0"
pylint = "^2.6.0"
pytest-aiohttp = "^0.3.0"
pytest = "^6.1.0"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.0"
coverage = {version = "^5.3", extras = ["toml"]}
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
tox = "^3.20.0"
async-generator = "^1.10"
docker-compose = "^1.27.4"
watchdog = "^0.10.3"
crontab = "^0.22.6"
iprpc = "^0.2.3"
requests = "^2.24.0"
pytest-httpserver = "^0.3.5"

[tool.poetry.extras]
fastapi = ["uvicorn", "fastapi"]
oracle = ["cx-Oracle"]
postgres = ["asyncpg"]
rabbitmq = ["pika"]
s3 = ["aiobotocore", "python-magic"]
sftp = ["asyncssh"]
dbtm = ["asyncpg", "crontab"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
